# vortnotix

./: .gitignore  README.md
backend/: Makefile  example.env  pyproject.toml  setup.py
backend/alembic/: env.py
backend/docker-compose/: storages.yaml
backend/libs/mediator/: base.py  mediator.py  middleware.py  registry.py
backend/src/: webserver.py
backend/src/api/v1/: router.py
backend/src/api/v1/base/: schemas.py
backend/src/api/v1/healthcheck/: handlers.py  schemas.py
backend/src/api/v1/send/: handlers.py  schemas.py
backend/src/config/: __init__.py  database.py  general.py
backend/src/container/: base.py  mediator.py
backend/src/modules/base/domain/: entities.py  registries.py
backend/src/modules/base/domain/services/: readiness.py  transaction_context.py
backend/src/modules/base/domain/use_cases/: readiness.py
backend/src/modules/base/gateways/postgresql/: database.py  models.py
backend/src/modules/base/services/: readiness.py  transaction_context.py
backend/tests/libs/mediator/: test_mediator.py  test_registry.py
