[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Egor <slamihin123@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.14"
uvicorn = "^0.35.0"
gunicorn = "^23.0.0"
pydantic-settings = "^2.10.1"
jinja2 = "^3.1.6"
punq = "^0.7.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.42"}
alembic = "^1.16.4"
asyncpg = "^0.30.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"
ruff = "^0.12.2"
ipython = "^9.4.0"
pytest = "^9.0.1"
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = []

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "C90", # complex-structure
]
ignore = [
    "E501", # line too long, handled by black
    "B008",
    "C416",
    "B019", # Использование lru_cache Под вопросом
]